--- a/cx.html
+++ b/cx.html
@@ -1339,6 +1339,8 @@ function main() {
     title="qqTop()"><wbr />qq<wbr />Top<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#tmpFilename,"
     title="tmpFilename(): string"><wbr />tmp<wbr />Filename<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#tmpFilename,string"
+    title="tmpFilename(filename: string): string"><wbr />tmp<wbr />Filename<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#rmTmpFilenames,"
     title="rmTmpFilenames()"><wbr />rm<wbr />Tmp<wbr />Filenames<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#doInfo,"
@@ -1840,6 +1842,12 @@ coltype examples : &quot;red&quot;,&quot;blue&quot;,&quot;medium&quot;,&quot;dar
 
 
 </dd>
+<dt id="tmpFilename"><a name="tmpFilename,string"></a><pre><span class="Keyword">proc</span> <span class="Identifier">tmpFilename</span><span class="Other">(</span><span class="Identifier">filename</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">ReadEnvEffect</span><span class="Other">,</span> <span class="Identifier">ReadIOEffect</span><span class="Other">,</span> <span class="Identifier">TimeEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+
+</dd>
 <dt id="rmTmpFilenames"><a name="rmTmpFilenames,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">rmTmpFilenames</span><span class="Other">(</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">AssertionError</span><span class="Other">,</span> <span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span>
                       <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteDirEffect</span><span class="Other">,</span> <span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
@@ -2049,7 +2057,7 @@ zipWith<pre class="listing"><span class="Keyword">var</span> <span class="Identi
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-08-06 13:45:11 UTC</small>
+        <small>Made with Nim. Generated: 2018-08-09 19:36:21 UTC</small>
       </div>
     </div>
   </div>
