--- a/cx.html
+++ b/cx.html
@@ -1411,7 +1411,7 @@ Version     : 0.9.9
 
 ProjectStart: 2015-06-20
 
-Latest      : 2018-08-01
+Latest      : 2018-08-17
 
 Compiler    : Nim &gt;= 0.18.x dev branch
 
@@ -1487,6 +1487,8 @@ Note        : mileage may vary depending on the available
               for printing of multiple columns in the terminal the print2,printLn2,printBiCol2,printLnBiCol2
               
               routines should be used.
+              
+              Due to the flurry of updates in the development branch occasional carnage may occure.
 
 
 Installation: nimble install nimcx
@@ -2057,7 +2059,7 @@ zipWith<pre class="listing"><span class="Keyword">var</span> <span class="Identi
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-08-09 19:36:21 UTC</small>
+        <small>Made with Nim. Generated: 2018-08-17 10:11:14 UTC</small>
       </div>
     </div>
   </div>
