--- a/cxtime.html
+++ b/cxtime.html
@@ -1274,6 +1274,10 @@ function main() {
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#localTime,"
     title="localTime(): auto"><wbr />local<wbr />Time<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#cxtoday,"
+    title="cxtoday(): string"><wbr />cxtoday<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#cxnow,"
+    title="cxnow(): string"><wbr />cxnow<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#getTimeStr,"
     title="getTimeStr(): string"><wbr />get<wbr />Time<wbr />Str<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#toDateTime,string"
@@ -1303,8 +1307,8 @@ function main() {
   <li><a class="reference" href="#createSeqDate,string,int"
     title="createSeqDate(fromDate: string; days: int = 1): seq[string]"><wbr />create<wbr />Seq<wbr />Date<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#getRndDate,int,int"
-    title="getRndDate(minyear: int = parseInt(year(getDateStr())) - 50;
-           maxyear: int = parseInt(year(getDateStr())) + 50): string"><wbr />get<wbr />Rnd<wbr />Date<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="getRndDate(minyear: int = parseInt(year(cxtoday())) - 50;
+           maxyear: int = parseInt(year(cxtoday())) + 50): string"><wbr />get<wbr />Rnd<wbr />Date<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#printTimeMsg,string,int"
     title="printTimeMsg(atext: string = getTimeStr(); xpos: int = 1): string"><wbr />print<wbr />Time<wbr />Msg<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#printLnTimeMsg,string,int"
@@ -1339,14 +1343,6 @@ function main() {
     title="clearTimerResults(aname: string = &quot;&quot;; quiet: bool = true; xpos: int = 3)"><wbr />clear<wbr />Timer<wbr />Results<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#clearAllTimerResults,bool,int"
     title="clearAllTimerResults(quiet: bool = true; xpos: int = 3)"><wbr />clear<wbr />All<wbr />Timer<wbr />Results<span class="attachedType" style="visibility:hidden"></span></a></li>
-
-  </ul>
-</li>
-<li>
-  <a class="reference reference-toplevel" href="#18" id="68">Templates</a>
-  <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#cxtoday.t,"
-    title="cxtoday(): string"><wbr />cxtoday<span class="attachedType" style="visibility:hidden"></span></a></li>
 
   </ul>
 </li>
@@ -1406,6 +1402,18 @@ function main() {
 <dd>
 <p>localTime</p>
 <p>quick access to local time for printing </p>
+
+
+</dd>
+<dt id="cxtoday"><a name="cxtoday,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">cxtoday</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">TimeEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+<p>today</p>
+<p>returns date string </p>
+
+
+</dd>
+<dt id="cxnow"><a name="cxnow,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">cxnow</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">TimeEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
 
 
 </dd>
@@ -1512,7 +1520,7 @@ Format yyyy
 <p>createSeqDate</p>
 <p>creates a seq of dates in format yyyy-MM-dd</p>
 <p>fromDate and toDate must be a date in form yyyy-MM-dd eg. 2018-06-18</p>
-<pre class="listing"><span class="Identifier">showSeq</span><span class="Punctuation">(</span><span class="Identifier">createseqdate</span><span class="Punctuation">(</span><span class="Identifier">cxtoday</span><span class="Punctuation">,</span> <span class="StringLit">&quot;2022-05-25&quot;</span><span class="Punctuation">)</span><span class="Punctuation">,</span><span class="Identifier">maxitemwidth</span><span class="Operator">=</span><span class="DecNumber">12</span><span class="Punctuation">)</span></pre>
+<pre class="listing"><span class="Identifier">showSeq</span><span class="Punctuation">(</span><span class="Identifier">createseqdate</span><span class="Punctuation">(</span><span class="Identifier">cxtoday</span><span class="Punctuation">(</span><span class="Punctuation">)</span><span class="Punctuation">,</span> <span class="StringLit">&quot;2022-05-25&quot;</span><span class="Punctuation">)</span><span class="Punctuation">,</span><span class="Identifier">maxitemwidth</span><span class="Operator">=</span><span class="DecNumber">12</span><span class="Punctuation">)</span></pre>
 
 </dd>
 <dt id="createSeqDate"><a name="createSeqDate,string,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">createSeqDate</span><span class="Other">(</span><span class="Identifier">fromDate</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">;</span> <span class="Identifier">days</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">1</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span>
@@ -1522,11 +1530,11 @@ Format yyyy
 <p>createSeqDate</p>
 <p>creates a seq of dates in format yyyy-MM-dd</p>
 <p>from fromDate to fromDate + days</p>
-<pre class="listing"><span class="Identifier">showSeq</span><span class="Punctuation">(</span><span class="Identifier">createseqdate</span><span class="Punctuation">(</span><span class="Identifier">cxtoday</span><span class="Punctuation">,</span> <span class="DecNumber">60</span><span class="Punctuation">)</span><span class="Punctuation">,</span><span class="Identifier">maxitemwidth</span><span class="Operator">=</span><span class="DecNumber">12</span><span class="Punctuation">)</span></pre>
+<pre class="listing"><span class="Identifier">showSeq</span><span class="Punctuation">(</span><span class="Identifier">createseqdate</span><span class="Punctuation">(</span><span class="Identifier">cxtoday</span><span class="Punctuation">(</span><span class="Punctuation">)</span><span class="Punctuation">,</span> <span class="DecNumber">60</span><span class="Punctuation">)</span><span class="Punctuation">,</span><span class="Identifier">maxitemwidth</span><span class="Operator">=</span><span class="DecNumber">12</span><span class="Punctuation">)</span></pre>
 
 </dd>
-<dt id="getRndDate"><a name="getRndDate,int,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">getRndDate</span><span class="Other">(</span><span class="Identifier">minyear</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="Identifier">parseInt</span><span class="Other">(</span><span class="Identifier">year</span><span class="Other">(</span><span class="Identifier">getDateStr</span><span class="Other">(</span><span class="Other">)</span><span class="Other">)</span><span class="Other">)</span> <span class="Operator">-</span> <span class="DecNumber">50</span><span class="Other">;</span>
-               <span class="Identifier">maxyear</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="Identifier">parseInt</span><span class="Other">(</span><span class="Identifier">year</span><span class="Other">(</span><span class="Identifier">getDateStr</span><span class="Other">(</span><span class="Other">)</span><span class="Other">)</span><span class="Other">)</span> <span class="Operator">+</span> <span class="DecNumber">50</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
+<dt id="getRndDate"><a name="getRndDate,int,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">getRndDate</span><span class="Other">(</span><span class="Identifier">minyear</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="Identifier">parseInt</span><span class="Other">(</span><span class="Identifier">year</span><span class="Other">(</span><span class="Identifier">cxtoday</span><span class="Other">(</span><span class="Other">)</span><span class="Other">)</span><span class="Other">)</span> <span class="Operator">-</span> <span class="DecNumber">50</span><span class="Other">;</span>
+               <span class="Identifier">maxyear</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="Identifier">parseInt</span><span class="Other">(</span><span class="Identifier">year</span><span class="Other">(</span><span class="Identifier">cxtoday</span><span class="Other">(</span><span class="Other">)</span><span class="Other">)</span><span class="Other">)</span> <span class="Operator">+</span> <span class="DecNumber">50</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
     <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">OverflowError</span><span class="Other">,</span> <span class="Identifier">ValueError</span><span class="Other">,</span> <span class="Identifier">AssertionError</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 <p>getRndDate</p>
@@ -1667,18 +1675,6 @@ Format yyyy
 </dd>
 
 </dl></div>
-<div class="section" id="18">
-<h1><a class="toc-backref" href="#18">Templates</a></h1>
-<dl class="item">
-<dt id="cxtoday"><a name="cxtoday.t,"></a><pre><span class="Keyword">template</span> <span class="Identifier">cxtoday</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span></pre></dt>
-<dd>
-<p>today</p>
-<p>returns date string </p>
-
-
-</dd>
-
-</dl></div>
 
   </div>
 </div>
@@ -1687,7 +1683,7 @@ Format yyyy
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-08-17 10:11:20 UTC</small>
+        <small>Made with Nim. Generated: 2018-08-17 16:26:07 UTC</small>
       </div>
     </div>
   </div>
